Fix spacing at bottom of images

--- a/styles/main.less
+++ b/styles/main.less
@@ -539,6 +539,9 @@ body {
 }
 
 #populr > #image-slider-themes > .basic();
+.asset-type-imagegroup img {
+  display: block;
+}
 
 * html .clearfix             { zoom: 1; } /* IE6 */
 *:first-child+html .clearfix { zoom: 1; } /* IE7 */
